Memory limit for docker single node build is set to be 4G